--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -41,7 +41,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.7.10-y.0",
+    "@freshworks-jaya/freshchat-api": "^0.7.10-alpha.4",
     "@freshworks-jaya/kairos-api": "^0.1.1-alpha.0",
     "@freshworks-jaya/marketplace-models": "^0.1.7-alpha.0",
     "@freshworks-jaya/utilities": "^0.2.3-alpha.0",
