--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/freshchat-api",
-  "version": "0.7.9",
+  "version": "0.7.10-alpha.4",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -16,7 +16,7 @@
     "build": "tsc && cpx \"src/*.hbs\" ./lib",
     "format": "prettier --write \"src/**/*.ts\"",
     "build:check": "tsc --noEmit",
-    "lint": "tsc --noEmit && eslint '*/**/*.ts' --quiet --fix",
+    "lint": "tsc --noEmit && eslint 'src/**/*.ts' --quiet --fix",
     "prepare": "npm run build",
     "preversion": "npm run lint"
   },
@@ -42,10 +42,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/utilities": "^0.2.2",
+    "@freshworks-jaya/utilities": "^0.2.3-alpha.0",
     "axios": "^0.19.2",
+    "dayjs": "^1.8.36",
     "handlebars": "^4.7.6",
-    "handlebars-helpers": "^0.10.0",
-    "helper-date": "^1.0.1"
+    "handlebars-helpers": "^0.10.0"
   }
 }
