--- a/packages/kairos-api/package.json
+++ b/packages/kairos-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/kairos-api",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "description": "Provides simple interface for accessing Kairos's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -14,7 +14,7 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "build:check": "tsc --noEmit",
-    "lint": "tsc --noEmit && eslint '*/**/*.ts' --quiet --fix",
+    "lint": "tsc --noEmit && eslint 'src/**/*.ts' --quiet --fix",
     "prepare": "npm run build",
     "preversion": "npm run lint"
   },
