--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/utilities",
-  "version": "0.2.2",
+  "version": "0.2.3-alpha.0",
   "description": "Provides a function that can replace placeholders in a string with a given map.",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -15,7 +15,7 @@
     "test": "nyc --reporter=lcov mocha",
     "build": "tsc",
     "build:check": "tsc --noEmit",
-    "lint": "tsc --noEmit && eslint '*/**/*.ts' --quiet --fix",
+    "lint": "tsc --noEmit && eslint 'src/**/*.ts' --quiet --fix",
     "prepare": "npm run build"
   },
   "keywords": [],
