--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.12.18",
+  "version": "0.12.19-alpha.0",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -41,7 +41,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.7.12",
+    "@freshworks-jaya/freshchat-api": "^0.7.13-alpha.0",
     "@freshworks-jaya/kairos-api": "^0.1.2",
     "@freshworks-jaya/marketplace-models": "^0.1.7",
     "@freshworks-jaya/utilities": "^0.2.3",
