--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -46,6 +46,7 @@
     "@freshworks-jaya/marketplace-models": "^0.1.7",
     "@freshworks-jaya/utilities": "^0.2.3",
     "axios": "^0.19.2",
-    "bluebird": "^3.7.2"
+    "bluebird": "^3.7.2",
+    "querystring": "^0.2.1"
   }
 }
