--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -29,6 +29,7 @@
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
     "@types/sinon": "^9.0.0",
+    "@types/lodash-es": "^4.17.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "codecov": "^3.6.5",
@@ -47,6 +48,7 @@
     "@freshworks-jaya/utilities": "^0.2.3",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
+    "lodash-es": "^4.17.21",
     "querystring": "^0.2.1"
   }
 }
