--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -26,6 +26,7 @@
     "@types/bluebird": "^3.5.30",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/handlebars-helpers": "^0.5.2",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
     "@types/sinon": "^9.0.0",
@@ -46,6 +47,8 @@
     "@freshworks-jaya/marketplace-models": "^0.1.7",
     "@freshworks-jaya/utilities": "^0.2.3",
     "axios": "^0.19.2",
-    "bluebird": "^3.7.2"
+    "bluebird": "^3.7.2",
+    "handlebars": "^4.7.6",
+    "handlebars-helpers": "^0.10.0"
   }
 }
