--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -30,6 +30,7 @@
     "@types/handlebars-helpers": "^0.5.2",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
+    "@types/html-to-text": "^6.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "codecov": "^3.6.5",
@@ -46,6 +47,7 @@
     "axios": "^0.19.2",
     "dayjs": "^1.8.36",
     "handlebars": "^4.7.6",
-    "handlebars-helpers": "^0.10.0"
+    "handlebars-helpers": "^0.10.0",
+    "html-to-text": "7.0.0"
   }
 }
