--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.12.27-alpha.3",
+  "version": "0.12.27-alpha.4",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -26,6 +26,7 @@
     "@types/bluebird": "^3.5.30",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/handlebars-helpers": "^0.5.2",
     "@types/lodash": "^4.14.168",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
@@ -42,12 +43,14 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.7.16-alpha.0",
+    "@freshworks-jaya/freshchat-api": "^0.7.16-alpha.1",
     "@freshworks-jaya/kairos-api": "^0.1.2",
     "@freshworks-jaya/marketplace-models": "^0.1.7",
     "@freshworks-jaya/utilities": "^0.2.3",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
+    "handlebars": "^4.7.6",
+    "handlebars-helpers": "^0.10.0",
     "lodash": "^4.17.21",
     "querystring": "^0.2.1"
   }
