--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -27,6 +27,7 @@
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/handlebars-helpers": "^0.5.2",
+    "@types/html-to-text": "^6.0.0",
     "@types/lodash": "^4.14.168",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
@@ -52,6 +53,8 @@
     "handlebars": "^4.7.6",
     "handlebars-helpers": "^0.10.0",
     "lodash": "^4.17.21",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "html-to-text": "7.0.0",
+    "dayjs": "^1.8.36"
   }
 }
