--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.12.29",
+  "version": "0.12.30-alpha.7",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -26,6 +26,9 @@
     "@types/bluebird": "^3.5.30",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/handlebars-helpers": "^0.5.2",
+    "@types/html-to-text": "^6.0.0",
+    "@types/lodash": "^4.14.168",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
     "@types/sinon": "^9.0.0",
@@ -41,11 +44,17 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.7.18",
+    "@freshworks-jaya/freshchat-api": "^0.7.19-alpha.1",
     "@freshworks-jaya/kairos-api": "^0.1.2",
     "@freshworks-jaya/marketplace-models": "^0.1.7",
-    "@freshworks-jaya/utilities": "^0.2.3",
+    "@freshworks-jaya/utilities": "^0.2.4-alpha.1",
     "axios": "^0.19.2",
-    "bluebird": "^3.7.2"
+    "bluebird": "^3.7.2",
+    "dayjs": "^1.8.36",
+    "handlebars": "^4.7.6",
+    "handlebars-helpers": "^0.10.0",
+    "html-to-text": "7.0.0",
+    "lodash": "^4.17.21",
+    "querystring": "^0.2.1"
   }
 }
