--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.12.30-alpha.7",
+  "version": "0.12.30",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -44,10 +44,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.7.19-alpha.1",
+    "@freshworks-jaya/freshchat-api": "^0.7.19",
     "@freshworks-jaya/kairos-api": "^0.1.2",
     "@freshworks-jaya/marketplace-models": "^0.1.7",
-    "@freshworks-jaya/utilities": "^0.2.4-alpha.1",
+    "@freshworks-jaya/utilities": "^0.2.4",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
     "dayjs": "^1.8.36",
