--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/freshchat-api",
-  "version": "0.7.19",
+  "version": "0.7.20-alpha.0",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -43,7 +43,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@freshworks-jaya/utilities": "^0.2.4",
+    "@freshworks-jaya/utilities": "^0.2.5-alpha.0",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "handlebars": "^4.7.7",
