--- a/packages/kairos-api/package.json
+++ b/packages/kairos-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/kairos-api",
-  "version": "0.1.2",
+  "version": "0.1.3-alpha.0",
   "description": "Provides simple interface for accessing Kairos's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -22,9 +22,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^3.8.3"
+    "typescript": "^4.2.4"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.21.1"
   }
 }
