--- a/packages/marketplace-models/package.json
+++ b/packages/marketplace-models/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/marketplace-models",
-  "version": "0.1.7",
+  "version": "0.1.8-alpha.0",
   "description": "Provides type definitions for models in marketplace product events",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -22,6 +22,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^3.8.3"
+    "typescript": "^4.2.4"
   }
 }
