--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/utilities",
-  "version": "0.2.4",
+  "version": "0.2.5-alpha.0",
   "description": "Provides a function that can replace placeholders in a string with a given map.",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -23,20 +23,20 @@
   "license": "ISC",
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.11.0",
-    "chai": "^4.2.0",
-    "codecov": "^3.6.5",
-    "mocha": "^7.1.1",
-    "nyc": "^15.0.1",
-    "sinon": "^9.0.1",
-    "source-map-support": "^0.5.16",
-    "ts-node": "^8.8.1",
-    "typescript": "^3.8.3"
+    "@types/chai": "^4.2.16",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^14.14.37",
+    "chai": "^4.3.4",
+    "codecov": "^3.8.1",
+    "mocha": "^8.3.2",
+    "nyc": "^15.1.0",
+    "sinon": "^10.0.0",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
-    "dayjs": "^1.8.23",
+    "dayjs": "^1.10.4",
     "timezone-support": "^2.0.2"
   }
 }
