--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -31,6 +31,7 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.37",
     "@types/sinon": "^9.0.11",
+    "@types/handlebars-helpers": "^0.5.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "codecov": "^3.8.1",
@@ -47,6 +48,7 @@
     "@freshworks-jaya/kairos-api": "^0.1.3",
     "@freshworks-jaya/marketplace-models": "^0.1.8",
     "@freshworks-jaya/utilities": "^0.2.5",
+    "handlebars-helpers": "^0.10.0",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "dayjs": "^1.10.4",
