--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.12.38",
+  "version": "0.13.0-alpha.0",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -48,8 +48,8 @@
     "@freshworks-jaya/kairos-api": "^0.1.3",
     "@freshworks-jaya/marketplace-models": "^0.1.8",
     "@freshworks-jaya/utilities": "^0.2.5",
-    "@google-cloud/logging": "^9.2.3",
     "@google-cloud/datastore": "^6.4.0",
+    "@google-cloud/logging": "^9.2.3",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "dayjs": "^1.10.4",
