--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -50,6 +50,7 @@
     "@freshworks-jaya/utilities": "^0.2.5",
     "@google-cloud/datastore": "^6.4.0",
     "@google-cloud/logging": "^9.2.3",
+    "googleapis": "71.0.0",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "dayjs": "^1.10.4",
