--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.14.2",
+  "version": "0.15.0-alpha.2",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -44,10 +44,10 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.7.22",
-    "@freshworks-jaya/kairos-api": "^0.1.3",
-    "@freshworks-jaya/marketplace-models": "^0.1.8",
-    "@freshworks-jaya/utilities": "^0.2.5",
+    "@freshworks-jaya/freshchat-api": "^0.7.23-alpha.1",
+    "@freshworks-jaya/kairos-api": "^0.1.4-alpha.0",
+    "@freshworks-jaya/marketplace-models": "^0.1.9-alpha.1",
+    "@freshworks-jaya/utilities": "^0.2.6-alpha.0",
     "@google-cloud/logging": "^9.3.1",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
