--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   },
   "resolutions": {
     "handlebars": "4.7.7",
-    "striptags": "3.2.0"
+    "striptags": "3.2.0",
+    "braces": "2.3.1",
+    "set-getter": "0.1.1"
   }
 }
