--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -56,8 +56,7 @@
     "handlebars-helpers": "^0.10.0",
     "html-to-text": "8.0.0",
     "lodash": "^4.17.21",
-    "querystring": "^0.2.1",
-    "safe-buffer": "^5.2.1"
+    "querystring": "^0.2.1"
   },
   "resolutions": {
     "handlebars": "4.7.7"
