--- a/packages/marketplace-models/package.json
+++ b/packages/marketplace-models/package.json
@@ -23,5 +23,8 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.3.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.4"
   }
 }
