--- a/packages/marketplace-models/package.json
+++ b/packages/marketplace-models/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/marketplace-models",
-  "version": "0.1.10",
+  "version": "0.1.11-alpha.0",
   "description": "Provides type definitions for models in marketplace product events",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -23,5 +23,8 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.3.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.4"
   }
 }
