--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.16.8",
+  "version": "0.16.9-alpha.0",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -46,7 +46,7 @@
   "dependencies": {
     "@freshworks-jaya/freshchat-api": "^0.7.25",
     "@freshworks-jaya/kairos-api": "^0.1.5",
-    "@freshworks-jaya/marketplace-models": "^0.1.11",
+    "@freshworks-jaya/marketplace-models": "^0.1.12-alpha.0",
     "@freshworks-jaya/utilities": "^0.2.6",
     "@google-cloud/logging": "^9.3.1",
     "axios": "^0.21.4",
