--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -36,7 +36,6 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "dayjs": "^1.10.5",
-    "timezone-support": "^2.0.2"
+    "dayjs": "^1.10.5"
   }
 }
