--- a/packages/freshchat-api/tsconfig.json
+++ b/packages/freshchat-api/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../tsconfig.settings.json",
   "compilerOptions": {
-    "outDir": "lib"
+    "outDir": "lib",
+    "useUnknownInCatchVariables": false
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
