--- a/packages/freshchat-api/tsconfig.json
+++ b/packages/freshchat-api/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../tsconfig.settings.json",
   "compilerOptions": {
-    "outDir": "lib",
-    "useUnknownInCatchVariables": false
+    "outDir": "lib"
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
