--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "handlebars": "4.7.7",
     "striptags": "3.2.0",
     "braces": "2.3.1",
-    "set-getter": "0.1.1"
+    "set-getter": "0.1.1",
+    "minimatch": "3.0.5"
   }
 }
