--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/freshchat-api",
-  "version": "0.7.32",
+  "version": "0.7.33-beta-3",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -43,7 +43,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@freshworks-jaya/utilities": "^0.2.10",
+    "@freshworks-jaya/utilities": "^1.0.0",
     "axios": "^0.21.4",
     "dayjs": "^1.10.5",
     "handlebars": "^4.7.7",
